--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Тайм-менеджмент — Управляй своим временем</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+      background: #f0f4f8;
+      color: #333;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.2em;
+      color: #2c3e50;
+    }
+    h2 {
+      color: #34495e;
+      margin-top: 1.5em;
+      margin-bottom: 0.5em;
+    }
+    p {
+      margin-bottom: 1em;
+    }
+    ul {
+      margin-left: 1.2em;
+      margin-bottom: 1em;
+    }
+    li {
+      margin-bottom: 0.5em;
+    }
+    footer {
+      text-align: center;
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #777;
+    }
+    .tips {
+      background: #dff0d8;
+      border-left: 6px solid #3c763d;
+      padding: 15px 20px;
+      margin: 20px 0;
+      border-radius: 4px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Тайм-менеджмент</h1>
+    <p>Управляйте своим временем эффективно и достигайте больше!</p>
+  </header>
+
+  <section>
+    <h2>Что такое тайм-менеджмент?</h2>
+    <p>Тайм-менеджмент — это искусство планирования и контроля времени, чтобы повысить продуктивность и снизить стресс.</p>
+  </section>
+
+  <section>
+    <h2>Основные принципы</h2>
+    <ul>
+      <li>Планирование задач и приоритетов</li>
+      <li>Установка реалистичных целей</li>
+      <li>Избегание прокрастинации</li>
+      <li>Использование техники «Помодоро» и других методов</li>
+      <li>Регулярный анализ и корректировка планов</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Полезные советы</h2>
+    <div class="tips">
+      <ul>
+        <li>Начинайте день с самых важных задач.</li>
+        <li>Разбивайте большие проекты на маленькие этапы.</li>
+        <li>Используйте ежедневники или приложения для планирования.</li>
+        <li>Отдыхайте и делайте перерывы для восстановления.</li>
+        <li>Учитесь говорить «нет», чтобы не перегружать себя.</li>
+      </ul>
+    </div>
+  </section>
+
+  <section>
+    <h2>Рекомендуемые инструменты</h2>
+    <ul>
+      <li><a href="https://todoist.com/" target="_blank" rel="noopener">Todoist</a> — планировщик задач</li>
+      <li><a href="https://pomodoro-tracker.com/" target="_blank" rel="noopener">Pomodoro Tracker</a> — таймер по технике Помодоро</li>
+      <li><a href="https://trello.com/" target="_blank" rel="noopener">Trello</a> — визуальный менеджер проектов</li>
+      <li><a href="https://evernote.com/" target="_blank" rel="noopener">Evernote</a> — заметки и идеи</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2024 Тайм-менеджмент. Все права защищены.</p>
+  </footer>
+</body>
+</html>
